# Bots-are-needed

./: README.md  allcommands.md  keep_alive.py  main.py  perfix_data.json  prefix_data.json  prefixes.json  pyproject.toml  reports.json
Jsons/: mainbank.json
cogs/: Dbl.py  Meme2.py  ai-test.py  ascii.py  autorole.py  ban.py  basic.py  clientevents.py  ctx-send.py  ctx-send2.py  economic_command.py  economy.py  eval_command.py  eval_command.pyy  guess.py  help.py  invite.py  kickbanunban.py  lockdown.py  lvl.py  member.py  music.py  ping.py  polls.py  rick_role.py  search.py  serverinfo.py  serverlist.py  severid.py  transloator.py  ttstest.py  uptime.py  warnings.py  who_is_command.py
