[tool.poetry]
name = "mine-and-jag-bot"
version = "0.1.0"
description = ""
authors = ["caialt123@gmail.com", "jagthefriend12@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
disputils = "^0.1.3"
flask = "^1.1.2"
cliff = "^3.5.0"
six = "^1.15.0"
utils = "^1.0.1"
replit = "^2.0.0"
discordpython = "^0.0.1"
humanize = "^3.2.0"
discord = "^1.0.1"
"discord.py" = "^1.6.0"
discordpythonv2 = "^0.0.1"
lib = "^3.0.0"
goslate = "^1.5.1"
gtts = "^2.2.1"
jupyter-tabnine = "^1.2.0"
jishaku = "^1.20.0"
youtube-dl = "^2021.2.4"
PyNaCl = "^1.4.0"
dblpy = "^0.4.0"
youtube-search-python = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
